--- a/EagleVM/EagleVM.vcxproj.filters
+++ b/EagleVM/EagleVM.vcxproj.filters
@@ -30,6 +30,12 @@
     <ClCompile Include="EagleVM.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\pe\pe_sections\pe_code_section.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\pe\pe_sections\pe_handler_section.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Headers\virtual_machine\handle_generator.h">
@@ -45,6 +51,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Headers\util\zydis_helper.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Headers\pe\pe_sections\pe_code_section.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Headers\pe\pe_sections\pe_handler_section.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
