✨ VM random register swapping

--- a/EagleVM/EagleVM.vcxproj
+++ b/EagleVM/EagleVM.vcxproj
@@ -110,6 +110,7 @@
     <ClCompile Include="Source\pe\pe_sections\pe_handler_section.cpp" />
     <ClCompile Include="Source\util\zydis_helper.cpp" />
     <ClCompile Include="Source\virtual_machine\handle_generator.cpp" />
+    <ClCompile Include="Source\virtual_machine\vm_generator.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Headers\pe\pe_generator.h" />
@@ -119,6 +120,7 @@
     <ClInclude Include="Headers\pe\pe_sections\pe_section.h" />
     <ClInclude Include="Headers\util\zydis_helper.h" />
     <ClInclude Include="Headers\virtual_machine\handle_generator.h" />
+    <ClInclude Include="Headers\virtual_machine\vm_generator.h" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\deps\zydis\msvc\dependencies\zycore\Zycore.vcxproj">
