--- a/EagleVM/EagleVM.vcxproj
+++ b/EagleVM/EagleVM.vcxproj
@@ -108,9 +108,12 @@
     <ClCompile Include="Source\pe\pe_parser.cpp" />
     <ClCompile Include="Source\pe\pe_sections\pe_code_section.cpp" />
     <ClCompile Include="Source\pe\pe_sections\pe_handler_section.cpp" />
+    <ClCompile Include="Source\util\math.cpp" />
     <ClCompile Include="Source\util\zydis_helper.cpp" />
     <ClCompile Include="Source\virtual_machine\handle_generator.cpp" />
     <ClCompile Include="Source\virtual_machine\vm_generator.cpp" />
+    <ClCompile Include="Source\virtual_machine\vm_handler_manager.cpp" />
+    <ClCompile Include="Source\virtual_machine\vm_register_manager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Headers\pe\pe_generator.h" />
@@ -118,9 +121,14 @@
     <ClInclude Include="Headers\pe\pe_sections\pe_code_section.h" />
     <ClInclude Include="Headers\pe\pe_sections\pe_handler_section.h" />
     <ClInclude Include="Headers\pe\pe_sections\pe_section.h" />
+    <ClInclude Include="Headers\util\math.h" />
+    <ClInclude Include="Headers\util\zydis_defs.h" />
     <ClInclude Include="Headers\util\zydis_helper.h" />
     <ClInclude Include="Headers\virtual_machine\handle_generator.h" />
+    <ClInclude Include="Headers\virtual_machine\models\vm_defs.h" />
     <ClInclude Include="Headers\virtual_machine\vm_generator.h" />
+    <ClInclude Include="Headers\virtual_machine\vm_handler_manager.h" />
+    <ClInclude Include="Headers\virtual_machine\vm_register_manager.h" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\deps\zydis\msvc\dependencies\zycore\Zycore.vcxproj">
