--- a/EagleVM/EagleVM.vcxproj
+++ b/EagleVM/EagleVM.vcxproj
@@ -104,6 +104,11 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="EagleVM.cpp" />
+    <ClCompile Include="Source\obfuscation\mba\mba.cpp" />
+    <ClCompile Include="Source\obfuscation\mba\variable\mba_const.cpp" />
+    <ClCompile Include="Source\obfuscation\mba\variable\mba_exp.cpp" />
+    <ClCompile Include="Source\obfuscation\mba\variable\mba_var.cpp" />
+    <ClCompile Include="Source\obfuscation\mba\variable\mba_xy.cpp" />
     <ClCompile Include="Source\pe\pe_generator.cpp" />
     <ClCompile Include="Source\pe\pe_parser.cpp" />
     <ClCompile Include="Source\pe\pe_sections\pe_code_section.cpp" />
@@ -118,6 +123,16 @@
     <ClCompile Include="Source\virtual_machine\vm_register_manager.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Headers\obfsucation\mba\mba.h" />
+    <ClInclude Include="Headers\obfsucation\mba\variable\mba_const.h" />
+    <ClInclude Include="Headers\obfsucation\mba\variable\mba_exp.h" />
+    <ClInclude Include="Headers\obfsucation\mba\variable\mba_var.h" />
+    <ClInclude Include="Headers\obfsucation\mba\variable\mba_xy.h" />
+    <ClInclude Include="Headers\obfuscation\mba\mba.h" />
+    <ClInclude Include="Headers\obfuscation\mba\variable\mba_const.h" />
+    <ClInclude Include="Headers\obfuscation\mba\variable\mba_exp.h" />
+    <ClInclude Include="Headers\obfuscation\mba\variable\mba_var.h" />
+    <ClInclude Include="Headers\obfuscation\mba\variable\mba_xy.h" />
     <ClInclude Include="Headers\pe\pe_generator.h" />
     <ClInclude Include="Headers\pe\pe_parser.h" />
     <ClInclude Include="Headers\pe\pe_sections\pe_code_section.h" />
@@ -132,7 +147,6 @@
     <ClInclude Include="Headers\virtual_machine\vm_generator.h" />
     <ClInclude Include="Headers\virtual_machine\vm_handler_manager.h" />
     <ClInclude Include="Headers\virtual_machine\vm_handle_generator.h" />
-    <ClInclude Include="Headers\virtual_machine\vm_mba.h" />
     <ClInclude Include="Headers\virtual_machine\vm_register_manager.h" />
   </ItemGroup>
   <ItemGroup>
