--- a/.editorconfig
+++ b/.editorconfig
@@ -1,5 +1,23 @@
-# Rules in this file were initially inferred by Visual Studio IntelliCode from the C:\Users\admin\RiderProjects\EagleProtect codebase based on best match to current usage at 12/25/2021
-# You can modify the rules from these initially generated values to suit your own policies
-# You can learn more about editorconfig here: https://docs.microsoft.com/en-us/visualstudio/ide/editorconfig-code-style-settings-reference
-[*.cs]
+root = true
 
+[*]
+trim_trailing_whitespace = true
+charset = utf-8
+
+[*.{c,h,cpp,hpp}]
+indent_style = space
+insert_final_newline = false
+
+[{CMakeLists.txt, *.cmake}]
+indent_style = space
+tab_width = 4
+insert_final_newline = false
+
+# Exclude the third_party folder
+[/deps/**]
+charset = unset
+end_of_line = unset
+insert_final_newline = unset
+trim_trailing_whitespace = unset
+indent_style = unset
+indent_size = unset
