--- a/EagleVMSandbox/EagleVMSandbox.vcxproj
+++ b/EagleVMSandbox/EagleVMSandbox.vcxproj
@@ -58,6 +58,8 @@
     <LinkIncremental>false</LinkIncremental>
     <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);$(SolutionDir)EagleVMStub\Headers</IncludePath>
     <LibraryPath>$(SolutionDir)out\Build\EagleVMStub;$(LibraryPath)</LibraryPath>
+    <OutDir>..\out\Build\$(ProjectName)</OutDir>
+    <IntDir>..\out\Intermediate\$(ProjectName)</IntDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
