added insertion of identities for mba obfuscation

--- a/EagleVM/EagleVM.vcxproj
+++ b/EagleVM/EagleVM.vcxproj
@@ -49,7 +49,7 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);$(ProjectDir)Headers;$(SolutionDir)deps\zydis\include;$(SolutionDir)deps\zydis\dependencies\zycore\include;$(SolutionDir)deps\zydis\msvc</IncludePath>
+    <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);$(ProjectDir)Headers;$(SolutionDir)deps\zydis\include;$(SolutionDir)deps\zydis\dependencies\zycore\include;$(SolutionDir)deps\zydis\msvc;$(SolutionDir)deps\bigint</IncludePath>
     <LibraryPath>$(LibraryPath)</LibraryPath>
     <OutDir>..\out\Build\$(ProjectName)</OutDir>
     <IntDir>..\out\Intermediate\$(ProjectName)</IntDir>
