--- a/EagleVM/EagleVM.vcxproj
+++ b/EagleVM/EagleVM.vcxproj
@@ -122,10 +122,20 @@
     <ClCompile Include="Source\util\section\section_manager.cpp" />
     <ClCompile Include="Source\util\util.cpp" />
     <ClCompile Include="Source\util\zydis_helper.cpp" />
+    <ClCompile Include="Source\virtual_machine\handlers\ia32_handlers\add.cpp" />
+    <ClCompile Include="Source\virtual_machine\handlers\ia32_handlers\dec.cpp" />
+    <ClCompile Include="Source\virtual_machine\handlers\ia32_handlers\div.cpp" />
+    <ClCompile Include="Source\virtual_machine\handlers\ia32_handlers\mul.cpp" />
+    <ClCompile Include="Source\virtual_machine\handlers\ia32_handlers\sub.cpp" />
+    <ClCompile Include="Source\virtual_machine\handlers\vm_handlers\vm_enter.cpp" />
+    <ClCompile Include="Source\virtual_machine\handlers\vm_handlers\vm_exit.cpp" />
+    <ClCompile Include="Source\virtual_machine\handlers\vm_handlers\vm_load.cpp" />
+    <ClCompile Include="Source\virtual_machine\handlers\vm_handlers\vm_pop.cpp" />
+    <ClCompile Include="Source\virtual_machine\handlers\vm_handlers\vm_push.cpp" />
+    <ClCompile Include="Source\virtual_machine\handlers\vm_handlers\vm_store.cpp" />
+    <ClCompile Include="Source\virtual_machine\handlers\vm_handler_entry.cpp" />
     <ClCompile Include="Source\virtual_machine\vm_generator.cpp" />
-    <ClCompile Include="Source\virtual_machine\vm_handler_manager.cpp" />
-    <ClCompile Include="Source\virtual_machine\vm_handle_generator.cpp" />
-    <ClCompile Include="Source\virtual_machine\vm_mba.cpp" />
+    <ClCompile Include="Source\virtual_machine\handlers\vm_handle_generator.cpp" />
     <ClCompile Include="Source\virtual_machine\vm_register_manager.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -152,11 +162,21 @@
     <ClInclude Include="Headers\util\util.h" />
     <ClInclude Include="Headers\util\zydis_defs.h" />
     <ClInclude Include="Headers\util\zydis_helper.h" />
+    <ClInclude Include="Headers\virtual_machine\handlers\ia32_handlers\add.h" />
+    <ClInclude Include="Headers\virtual_machine\handlers\ia32_handlers\dec.h" />
+    <ClInclude Include="Headers\virtual_machine\handlers\ia32_handlers\div.h" />
+    <ClInclude Include="Headers\virtual_machine\handlers\ia32_handlers\mul.h" />
+    <ClInclude Include="Headers\virtual_machine\handlers\ia32_handlers\sub.h" />
+    <ClInclude Include="Headers\virtual_machine\handlers\vm_handlers\vm_enter.h" />
+    <ClInclude Include="Headers\virtual_machine\handlers\vm_handlers\vm_exit.h" />
+    <ClInclude Include="Headers\virtual_machine\handlers\vm_handlers\vm_load.h" />
+    <ClInclude Include="Headers\virtual_machine\handlers\vm_handlers\vm_pop.h" />
+    <ClInclude Include="Headers\virtual_machine\handlers\vm_handlers\vm_push.h" />
+    <ClInclude Include="Headers\virtual_machine\handlers\vm_handlers\vm_store.h" />
     <ClInclude Include="Headers\virtual_machine\models\vm_defs.h" />
-    <ClInclude Include="Headers\virtual_machine\models\vm_handler_entry.h" />
+    <ClInclude Include="Headers\virtual_machine\handlers\vm_handler_entry.h" />
     <ClInclude Include="Headers\virtual_machine\vm_generator.h" />
-    <ClInclude Include="Headers\virtual_machine\vm_handler_manager.h" />
-    <ClInclude Include="Headers\virtual_machine\vm_handle_generator.h" />
+    <ClInclude Include="Headers\virtual_machine\handlers\vm_handle_generator.h" />
     <ClInclude Include="Headers\virtual_machine\vm_register_manager.h" />
   </ItemGroup>
   <ItemGroup>
