fixed project cmake include

--- a/EagleVM/CMakeLists.txt
+++ b/EagleVM/CMakeLists.txt
@@ -6,7 +6,11 @@ file(GLOB_RECURSE EagleVM_SRC
 
 add_executable(EagleVM ${EagleVM_SRC})
 
-target_include_directories(EagleVM PRIVATE Headers)
+target_include_directories(EagleVM
+        PRIVATE
+        Headers
+        ${PROJECT_SOURCE_DIR}/deps/bigint
+)
 target_link_libraries(EagleVM PRIVATE Zydis)
 target_compile_features(EagleVM PRIVATE cxx_std_23)
 
